--- a/lyrics/templates/lyrics/lyric_form.html
+++ b/lyrics/templates/lyrics/lyric_form.html
@@ -5,26 +5,29 @@
 
 <div class="container">
     <div class="mt-5">
-        <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-6">
-                <div class="rounded bg-light shadow">
-                    <form method="POST">
-                        {% csrf_token %}
+        <section>
+            <div class="row">
+                <div class="col-sm-2"></div>
+                    <div class="col-sm-6">
+                        <div class="bg-light shadow">
+                            <form method="POST">
+                                {% csrf_token %}
 
-                        <div class="py-3 px-3">
-                            <div class="form-group">
-                                {{ form.label_tag }}
-                                {{ form }}
-                            </div>
+                                <div class="py-3 px-3">
+                                    <div class="form-group">
+                                        {{ form.label_tag }}
+                                        {{ form }}
+                                    </div>
 
-                            <input type="submit" value="Add" class="px-4 py-2 y-2">
+                                    <input type="submit" value="Add" class="px-4 py-2 y-2">
+                                </div>
+
+                            </form>
                         </div>
-
-                    </form>
+                    </div>
+                    <div class="col-sm-4"></div>
                 </div>
-            </div>
-            <div class="col-sm-4"></div>
+            </section>
         </div>
     </div>
 </div>
