--- a/search/templates/search/search_result.html
+++ b/search/templates/search/search_result.html
@@ -3,7 +3,19 @@
 
 {% block content %}
 
-<h3>Search Result Page</h3>
+
+<div class="container">
+    <div class="mt-3">
+        <h3>Search Result Page</h3>
+        {% for lyric in object_list %}
+            <a href="{% url 'lyrics:single' lyric.slug %}">{{ lyric }}</a>
+        {% empty %}
+
+        <p class="text-light">No lyric found that match your search</p>
+
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
 
