--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link navi-link" href="{% url 'lyrics:add' %}">Add Lyric</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link navi-link" href="{% url 'lyrics:all' %}">Lyrics</a>
+            </li>
             <li class="nav-item navi-link dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
@@ -45,9 +48,7 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
+
           </ul>
           <form action="{% url 'search:results' %}" class="form-inline my-2 my-lg-0">
             <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
