--- a/templates/base.html
+++ b/templates/base.html
@@ -39,13 +39,20 @@
             </li>
             <li class="nav-item navi-link dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                {% if user.is_authenticated %}
+                  <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
+                  <a class="dropdown-item" href="{% url 'accounts:profile' %}">Profile</a>
+                {% else %}
+                  <a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a>
+                  <a class="dropdown-item" href="{% url 'accounts:sign_up' %}">Sign Up</a>
+                {% endif %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="mailto:oluwatosinjoseph789@gmail.com">
+                  Email Oluwatosin today!
+                </a>
               </div>
             </li>
 
