--- a/lyrics/templates/lyrics/sub_delete.html
+++ b/lyrics/templates/lyrics/sub_delete.html
@@ -20,7 +20,7 @@
                                 </div>
 
                                 <input type="submit" value="Yes" class="btn btn-danger px-3 py-2 y-2">
-                                <a href="{% url 'lyrics:complete' object.slug %}" class="btn btn-light px-4 py-2 y-2">No</a>
+                                <a href="{% url 'lyrics:complete' object.lyric.slug %}" class="btn btn-light px-4 py-2 y-2">No</a>
                             </div>
 
                         </form>
