--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,65 @@
-{% extends  'base.html' %}
+{% extends 'base.html' %}
+{% load static %}
 
 
 {% block content %}
 
-<h3>Index Page</h3>
+<div class="container">
+    <div class="mt-3">
+        <div class="row">
+            <div class="col-sm-7">
+                <div class="py-3 px-3 bg-light">
+                    <h3>ABOUT THE SITE</h3>
+                    <h5>AIM</h4>
+                        <p class="text-secondary">
+                            This is a little project I did with the intension
+                            of allowing people to share Christian hymns, psalms and songs
+                            with everyone else.
+                        </p>
+                        <p class="text-secondary">
+                            Feel free to contact me through my email if you 
+                            encounter any bug or challenge on this site.
+                        </p>
+                        <p class="text-secondary">
+                            Also feel free to contact me through my email if you 
+                            need a project similar to this or any website.
+                        </p>
+                </div>
+                <div class="py-3 px-3 bg-light">
+                    <h3>ABOUT ME</h3>
+                    <h5>User Responsibility</h4>
+                        <p class="text-secondary">
+                            My name is Oluwatosin Joseph Durodola.
+                            I believe in Christ Jesus and that he died and rose again.
+                            If we put our faith in him, we will have eternal life.
+                        </p>
+                        <p class="text-secondary">
+                            I can draw, play the piano, and love teaching and 
+                            teaching as a hobby.
+                        </p>
+                        
+                        <h5>Software Engineering</h5>
+                        <p class="text-secondary">
+                            I am a developer with skills in Python, JavaScript, HTML, CSS,
+                            and Bootstrap. I am very passionate about learning Artificial
+                            Intelligence and that is the next line for me.
+                            I can use both Django and Flask frame work of Python,
+                            while I code in Vanilla JavaScript probably because,
+                            frontend is not really my thing.
+                        </p>
+    
+                </div>
+            </div>
+            <div class="col-sm-1"></div>
+            <div class="col-sm-4">
+                <div class="mt-3">
+                    <img src="{% static 'assets/custom/img/oluwatosin.jpg' %}" 
+                    alt="Oluwatosin Picture" class="img-fluid img-thumbnail rounded-circle">
+                    <h4>Oluwatosin Joseph Durodola</h4>
+                    <h6>oluwatosinjoseph789@gmail.com</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
-
-
-
