--- a/lyrics/templates/lyrics/lyric_complete_form.html
+++ b/lyrics/templates/lyrics/lyric_complete_form.html
@@ -45,7 +45,7 @@
                         {% if object.chorus_set.all %}
                             <h6 class="text-primary">Chorus</h6>
                             {% for chorus in object.chorus_set.all %}
-                                <p class="text-light"><b>{{ chorus|linebreaks }}</b></p>
+                                <div class="text-yellow"><b>{{ chorus|linebreaks }}</b></div>
                                 <div class="mt-4 bg-secondary">
                                   <div class="py-1 px-1">
                                       <a class="btn btn-small btn-success" href="{% url 'lyrics:edit-chorus' chorus.id %}">
